# runann

./: Cargo.toml  README.md
examples/: iris.rs  iris.yaml  load_and_run.rs  xor_backprop.rs  xor_random.rs
src/: activation.rs  ann.rs  error.rs  forward.rs  io.rs  lib.rs  main.rs  train.rs
src/cli/: commands.rs  config.rs
tests/: cli_integration.rs  integration.rs
