[package]
name = "runann"
version = "0.1.0"
edition = "2021"
description = "A minimal feed-forward neural network library — Rust port of genann"
license = "Zlib"

[[bin]]
name = "runann"
path = "src/main.rs"

[dependencies]
rand       = "0.9"
clap       = { version = "4", features = ["derive"] }
serde      = { version = "1", features = ["derive"] }
serde_yaml = "0.9"

[dev-dependencies]
tempfile = "3"

[[example]]
name = "xor_backprop"
path = "examples/xor_backprop.rs"

[[example]]
name = "xor_random"
path = "examples/xor_random.rs"

[[example]]
name = "load_and_run"
path = "examples/load_and_run.rs"

[[example]]
name = "iris"
path = "examples/iris.rs"
